--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "FileSaver.js"]
 	path = FileSaver.js
 	url = https://github.com/eligrey/FileSaver.js.git
+[submodule "inject/FileSaver.js"]
+	path = inject/FileSaver.js
+	url = https://github.com/eligrey/FileSaver.js.git
