--- a/manifest.json
+++ b/manifest.json
@@ -8,32 +8,32 @@
   "description": "Save TVDB pages as an NFO which can be used for scraping in XBMC.",
   
   "icons" : {
-	  "48" : "icon48.png",
-	  "128" : "icon128.png"
+	  "48" : "icons/icon48.png",
+	  "128" : "icons/icon128.png"
 	},
   
   "permissions": ["tabs", "declarativeContent", "http://www.thetvdb.com/", "http://thetvdb.com/"],
   
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["background/background.js"],
 	"persistent": false
   },
   
  "content_scripts": [ {
-    "js": [ "jquery.min.js", "/FileSaver.js/FileSaver.js", "shared.js", "episodeContent.js" ],
+    "js": [ "inject/jquery.min.js", "inject/FileSaver.js/FileSaver.js", "inject/shared.js", "inject/episodeContent.js" ],
     "matches": [ "http://thetvdb.com/?tab=episode&seriesid=*&seasonid=*&id=*", "http://www.thetvdb.com/?tab=episode&seriesid=*&seasonid=*&id=*"],
     "run_at": "document_end"
   },
   {
-    "js": [ "jquery.min.js", "/FileSaver.js/FileSaver.js", "shared.js", "seriesContent.js" ],
+    "js": [ "inject/jquery.min.js", "inject/FileSaver.js/FileSaver.js", "inject/shared.js", "inject/seriesContent.js" ],
     "matches": [ "http://thetvdb.com/?tab=series&id=*", "http://www.thetvdb.com/?tab=series&id=*"],
     "run_at": "document_end"
   }],
   
   "page_action": {
     "default_icon": {
-      "19": "icon19.png",
-      "38": "icon38.png"
+      "19": "icons/icon19.png",
+      "38": "icons/icon38.png"
     },
     "default_title": "Create TVDB NFO"
   }
