--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "inject/FileSaver.js"]
 	path = inject/FileSaver.js
 	url = https://github.com/eligrey/FileSaver.js.git
+[submodule "nprogress"]
+	path = nprogress
+	url = https://github.com/rstacruz/nprogress.git
