--- a/manifest.json
+++ b/manifest.json
@@ -21,22 +21,30 @@
 
     "content_scripts": [
         {
-            "js": [ "inject/jquery.min.js", "inject/FileSaver.js/FileSaver.js", "inject/shared.js", "inject/episodeContent.js" ],
             "matches": [ "http://thetvdb.com/?tab=episode&seriesid=*&seasonid=*&id=*", "http://www.thetvdb.com/?tab=episode&seriesid=*&seasonid=*&id=*"],
-            "run_at": "document_end"
+            "run_at": "document_end",
+            
+            "js": [ "inject/jquery.min.js", "inject/FileSaver.js/FileSaver.js", "nprogress/nprogress.js", "inject/shared.js", "inject/episodeContent.js" ]
         },
         {
-            "js": [ "inject/jquery.min.js", "inject/FileSaver.js/FileSaver.js", "inject/shared.js", "inject/seriesContent.js" ],
             "matches": [ "http://thetvdb.com/?tab=series&id=*", "http://www.thetvdb.com/?tab=series&id=*"],
-            "run_at": "document_end"
+            "run_at": "document_end",
+            
+            "js": [ "inject/jquery.min.js", "inject/FileSaver.js/FileSaver.js", "nprogress/nprogress.js", "inject/shared.js", "inject/seriesContent.js" ]
+        },
+        { //Work-around: Chrome does not inject CSS when 'matches' is based on the query string.
+            "matches": [ "http://thetvdb.com/*", "http://www.thetvdb.com/*"],
+            "run_at": "document_end",
+            
+            "css": ["nprogress/nprogress.css"]
         }
     ],
-
+    
     "page_action": {
         "default_icon": {
             "19": "icons/icon19.png",
             "38": "icons/icon38.png"
-        },
+            },
         "default_title": "Create TVDB NFO"
     }
 }
